--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,10 +1,11 @@
-/* Main CSS - Imports all modules */
+/* Main Stylesheet - Imports all CSS modules */
 
 @import url('./css/variables.css');
 @import url('./css/base.css');
-@import url('./css/components.css');
 @import url('./css/layout.css');
+@import url('./css/components.css');
 @import url('./css/modal.css');
 @import url('./css/tabs.css');
 @import url('./css/providers.css');
 @import url('./css/logs.css');
+@import url('./css/faq-changelog.css');
